2010-07-09  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/feedcomponent010.py:
	Don't throw an exception when DEBUG_BIN_TO_DOT_FILE is not found.

2010-07-08  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/manager/config.py:
	* flumotion/twisted/flavors.py:
	flavours.ManagerComponentState has the type as a value in a dict so we
	need the itemgetter instead of the attrgetter.

2010-07-08  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/component/combiners/composite/composite.xml:
	* flumotion/manager/config.py:
	* flumotion/test/test.xml:
	* flumotion/test/test_admin_config.py:
	* flumotion/test/test_config.py:
	* flumotion/test/test_manager_config.py:
	* flumotion/test/test_registry.py:
	Update tests with deprecated content

2010-07-07  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/test/test_component_httpstreamer.py:
	Remove old test

2010-07-07  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	reviewed by: Jan

	* flumotion/common/common.py:
	* flumotion/component/consumers/httpstreamer/httpstreamer.py:
	* flumotion/component/encoders/theora/theora.py:
	* flumotion/component/producers/firewire/firewire.py:
	* flumotion/twisted/flavors.py:
	Remove deprecated code from Flumotion 0.5

2010-07-07  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/admin/gtk/componentlist.py:
	* flumotion/twisted/flavors.py:
	operator.methodcaller doesn't appear till python2.6, use itemgetter
	instead and a getter method to pb.RemoteCache

2010-07-07  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	reviewed by: Jan

	* flumotion/admin/assistant/configurationwriter.py:
	* flumotion/admin/connections.py:
	* flumotion/admin/gtk/adminwindow.py:
	* flumotion/admin/gtk/componentlist.py:
	* flumotion/common/bugreporter.py:
	* flumotion/common/python.py:
	* flumotion/component/producers/webcam/wizard_gtk.py:
	* flumotion/manager/config.py:
	Remove compatibility code with python <= 2.4
