@@ -1,3 +1,9 @@
+2010-07-09  Jan Urbanski  <jurbanski@flumotion.com>
+
+	* flumotion/extern/log/log.py:
+	Remove mentions of Flumotion from log.py, it should be left as a
+	generic module.
+
 2010-07-09  Zaheer Abbas Merali  <zaheerabbas at merali dot org>
 
 	* flumotion/component/feedcomponent010.py:
